more responsiveness and layout shift fixes

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -115,7 +115,8 @@ html {
   -webkit-user-select: none;
   -webkit-touch-callout: none;
 }
-.list-view-wrapper .full-screen-view:last-child {
+.list-view-wrapper .full-screen-view:last-child,
+.list-view-wrapper .list-view:last-child {
   margin-bottom: 0 !important;
 }
 .full-screen-view .pokemon-card-image {
@@ -193,7 +194,7 @@ html {
   top: 4px;
 }
 .buttons-wrapper {
-  max-height: 4.093rem;
+  min-height: 4.093rem;
 }
 .dark-background-link {
   color: lightskyblue;
@@ -434,7 +435,7 @@ a.white-hover:hover {
     max-width: calc(2 * (25px + 0.25rem));
   }
   .buttons-wrapper {
-    max-height: 7.233rem;
+    min-height: 7.233rem;
   }
 }
 
